--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0"
